# fullstack-react-monorepo-template

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  init
api/: .env.example  pyproject.toml
api/backend/: asgi.py  urls.py  wsgi.py
api/backend/config/: base.py  local.py  prod.py
api/backend/infos/: admin.py  models.py  serializers.py  urls.py  views.py
api/backend/infos/migrations/: 0001_initial.py
api/backend/users/: admin.py  models.py  serializers.py  urls.py  views.py
api/backend/users/migrations/: 0001_initial.py  0002_default_admin_user.py  0003_alter_user_email.py
app/: .eslintrc.cjs  .prettierrc.cjs  README.md  nx.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vitest.workspace
app/.storybook/: story-loader.js
app/tools/scripts/: eas-build-pre-install.mjs
